# amulet

./: .gitignore  LICENSE  README.md  todo.txt
example/: CMakeLists.txt  example.cc  fizzbuzz.cc
include/: range_facade.hh
include/amulet/: bind_operator.hh  check_member.hh  comprehension_macro.hh  enumerator.hh  int_range.hh  iterator_range.hh  method.hh  option.hh  query_macro.hh  range_adaptor.hh  range_enumerator.hh  range_extension.hh  range_extension.hh.autosave  range_facade.hh  short_query_macro.hh  type_traits.hh
include/amulet/algorithm/: filter.hh  map.hh
include/amulet/dsl/: extend_by_increment.hh  query_macro.hh  short_query_macro.hh
include/amulet/iterator/: flatten_iterator.hh  int_iterator.hh  unique_iterator.hh  with_index_iterator.hh  zip_iterator.hh
include/amulet/methods/: filter.hh  keys.hh  map.hh  values.hh  with_index.hh
test/: CMakeLists.txt  algorithm.cc  bind_operator.cc  comprehension_macro.cc  extend_by_increment.cc  int_iterator.cc  method.cc  option.cc  query_macro.cc  range_extension.cc  type_traits.cc
test/methods/: filter.cc  keys_values.cc  map.cc  with_index.cc
util/: make_method_macros.rb
